[tool.poetry]
name = "llqm"
version = "0.1.0"
description = "Find more information about current news."
authors = ["Shicheng Lu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.39"
langchain-community = "^0.3.3"
openai = "^1.52.2"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
